create confluence page funcitonality added

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,9 +1,9 @@
 
 Confluence:
-  confluence_uploader_url: "https://{domain}.atlassian.net/wiki/api/v2/pages/{confluence_page_id}"
-  jira_issue_url: "https://{domain}.atlassian.net/rest/api/3/issue/{issue_Key}"
+  confluence_uploader_url: "https://{domain}/wiki/api/v2/pages/{confluence_page_id}"
+  jira_issue_url: "https://{domain}/rest/api/3/issue/{issue_Key}"
   confluence_page_creator_url: "https://{domain}/wiki/api/v2/pages"
-  domain_identidfier: "smw104-jams"
+  domain_identidfier: "smw104-jams.atlassian.net"
   space_key: "Jams104"
   status: "current"
   representation: "storage"
